2007-02-01  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDropDownItem.cs: Make sure DropDownOpening event is 
	raised.  Fixes menu text/icons not showing up in PDN.

2007-02-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Control.cs: Remove code in constructor that makes every
	control with WS_CHILD set have initial location -1, -1.

2007-01-31  Jackson Harper  <jackson@ximian.com>

	* X11Dnd.cs: Take the keyboard on init to reduce coupling with
	XplatUIX11.
	* XplatUIX11.cs: Give teh keyboard to teh dnd.

2007-01-31  Jackson Harper  <jackson@ximian.com>

	* X11Dnd.cs: Use IDataObject instead of the DataObject class.
	- Remove some debug code.

2007-01-31  Jackson Harper  <jackson@ximian.com>

	* XplatUIX11.cs: If you set the override cursor during a grab, it
	should actually override the grab cursor.  This comes into play
	when you are setting custom cursors in a DND feedback method.

2007-01-31  Jackson Harper  <jackson@ximian.com>

	* X11Dnd.cs: Add support for handling the QueryContinue and
	GiveFeedback events.
	- Cancel drag and drop actions when the escape key is clicked.
	* XplatUIX11.cs: Let the dnd subsystem get key events, so that it
	can handle the ESCAPE key.
	- Allow dnd to swallow BUTTONUP messages if it needs to.  This is
	done when dnd events are continued after the button is released.
	- Add a new helper method so that dnd can translate key events.

2007-01-31  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Rewrite of Jacksons OnClickCancelButton patch to
	make it more obvious what is happening.

2007-01-30  Jackson Harper  <jackson@ximian.com>

	* XplatUIX11.cs: Don't break when handling button release in drag
	and drop operations. We need that BUTTONUP message to get through
	so capture is released.
	* X11Dnd.cs: We don't need to manually grab the pointer anymore,
	this is handled automatically when the mouse is down.

2007-01-30  Jackson Harper  <jackson@ximian.com>
